# braid

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  braid  braid-lang.cabal  braid.cabal  dune-project  main.c
app/: Main.hs
debug/: debug.c  debug.h  token_string.c  token_string.h
debug/lexer/: token_string.h
doc/: grammar.txt
examples/: hello.bd  hello.braid  match.bd  match.braid  match_test.bd  string.bd  string.braid  types.bd  types.braid
lexer/: debug.c  dune  helpers.c  lexer.c  lexer.h  lexer.ml  lexer_helpers.c  lexer_helpers.h  lexer_stubs.c  main  main.c  main.ml  token_type.h  word_type.c  word_type.h
lexer/debug/: token_string.c  token_string.h
lexer/examples/: test.braid
lib/lexer/: dune  helpers.c  helpers.h  lexer.c  lexer.h  lexer.ml
lib/parser/: dune  grammar.ml  parser.ml  types.ml
parser/: parser.ml
parser/doc/: grammar.txt  grammar_v2.txt
scripts/: config.yml  token_gen.py
src/: AST.hs  Lexer.hs  Parser.hs  Token.hs  main.rs
src/lexer/: lexer.rs  token.rs
src/parser/: astnode.rs  lexer.rs  mod.rs  parser.rs  syntax_error.rs  token.rs
