cabal-version:        2.4
name:                 braid
version:              0.1.0.0
synopsis:             Programming language
description:          Personal project programming language

author:               Alena Weiley
maintainer:           alena@weiley.org
extra-source-files:   README.md

library
    exposed-modules:  Lexer
    other-extensions: ForeignFunctionInterface
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    c-sources:        lexer/lexer.c, lexer/helpers.c
    include-dirs:     lexer
    install-includes: lexer.h

executable braid
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0, braid
    hs-source-dirs:   app
    default-language: Haskell2010
